--- a/nodeapi/locales/en.json
+++ b/nodeapi/locales/en.json
@@ -5,5 +5,6 @@
 		"one": "%s mouse",
 		"other": "%s mice"
 	},
-	"Welcome to": "Welcome to"
+	"Welcome to": "Welcome to",
+	"hi, you are hacked": "hi, you are hacked"
 }
