--- a/nodeapi/locales/es.json
+++ b/nodeapi/locales/es.json
@@ -5,5 +5,6 @@
 		"one": "%s ratón",
 		"other": "%s ratones"
 	},
-	"Welcome to": "Bienvenido a"
+	"Welcome to": "Bienvenido a",
+	"hi, you are hacked": "hola, te he hackeado"
 }
