añadimos pagina about, y probamos multi-idioma en ella

--- a/nodeapi/locales/es.json
+++ b/nodeapi/locales/es.json
@@ -6,5 +6,6 @@
 		"other": "%s ratones"
 	},
 	"Welcome to": "Bienvenido a",
-	"hi, you are hacked": "hola, te he hackeado"
+	"hi, you are hacked": "hola, te he hackeado",
+	"This is an amazing app!": "Esta es una app maravillosa!"
 }
