--- a/nodeapi/locales/en.json
+++ b/nodeapi/locales/en.json
@@ -6,5 +6,6 @@
 		"other": "%s mice"
 	},
 	"Welcome to": "Welcome to",
-	"hi, you are hacked": "hi, you are hacked"
+	"hi, you are hacked": "hi, you are hacked",
+	"This is an amazing app!": "This is an amazing app!"
 }
