--- a/nodeapi/locales/es.json
+++ b/nodeapi/locales/es.json
@@ -7,5 +7,8 @@
 	},
 	"Welcome to": "Bienvenido a",
 	"hi, you are hacked": "hola, te he hackeado",
-	"This is an amazing app!": "Esta es una app maravillosa!"
+	"This is an amazing app!": "Esta es una app maravillosa!",
+	"Login": "Login",
+	"Please login to access": "Por favor identifícate para acceder",
+	"Invalid credentials": "Invalid credentials"
 }
